[gd_scene load_steps=6 format=2]

[ext_resource path="res://cabin-hub/cabin_theme.tres" type="Theme" id=1]
[ext_resource path="res://cabin-hub/Level Select.gd" type="Script" id=2]
[ext_resource path="res://font/mainfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://cabin-hub/cabin_theme_box_hover.tres" type="StyleBox" id=4]

[sub_resource type="Theme" id=1]


[node name="MarginContainer" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 20.0
margin_right = 1350.0
margin_bottom = 760.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1340.0
margin_bottom = 740.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 1 )
use_top_left = false
_sections_unfolded = [ "Rect", "Theme" ]

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 349.0
margin_top = 277.0
margin_right = 983.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 198.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Button" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 198.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Vine Grotto"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button2" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 198.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "This Button Does Nothing"
flat = false
align = 1

[node name="Button3" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 198.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Big Chungus"
flat = false
align = 1

[node name="vine_menu" type="VBoxContainer" parent="CenterContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 202.0
margin_right = 320.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Theme" ]

[node name="Button" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="0"]

modulate = Color( 0, 1, 0.0625, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 118.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Explore"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="Button2" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="1"]

modulate = Color( 1, 0.796875, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 118.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy Tour"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="Button3" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 118.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy: Yellow"
flat = false
align = 1

[node name="Button4" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 63.0
margin_right = 118.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy: Blue"
flat = false
align = 1

[node name="Button5" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 118.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy: Black"
flat = false
align = 1

[node name="Button6" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 105.0
margin_right = 118.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy: Cyan"
flat = false
align = 1

[node name="Button7" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 126.0
margin_right = 118.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy: Green"
flat = false
align = 1

[node name="Button8" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 147.0
margin_right = 118.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy: Purple"
flat = false
align = 1

[node name="Button9" type="Button" parent="CenterContainer/HBoxContainer/vine_menu" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 118.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Trophy: Red"
flat = false
align = 1

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 76.0
margin_right = 634.0
margin_bottom = 108.0
rect_min_size = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Explore Vine Grotto and scope
out the locations of all the trophies."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "custom_fonts", "custom_styles" ]

[node name="Button" type="Button" parent="CenterContainer/HBoxContainer/Label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 40.0
margin_right = 176.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Begin"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Rect" ]

[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Button3" to="." method="_on_chungus_pressed"]

[connection signal="pressed" from="CenterContainer/HBoxContainer/vine_menu/Button" to="." method="_on_vine_explore_Button_pressed"]

[connection signal="pressed" from="CenterContainer/HBoxContainer/Label/Button" to="." method="_on_Button_pressed_forest_begin"]


